Fix hard to read tags name in dark mode

--- a/styles/blog.module.scss
+++ b/styles/blog.module.scss
@@ -200,6 +200,6 @@
 
     @media screen and (prefers-color-scheme: dark) {
         background: #172c00;
-        color: black !important;
+        color: white !important;
     }
 }
